dist_man1_MANS=

if BUILD_BITCOINLUMINARYD
  dist_man1_MANS+=bitcoinluminaryd.1
endif

if ENABLE_QT
  dist_man1_MANS+=bitcoinluminary-qt.1
endif

if BUILD_BITCOINLUMINARY_CLI
  dist_man1_MANS+=bitcoinluminary-cli.1
endif

if BUILD_BITCOINLUMINARY_TX
  dist_man1_MANS+=bitcoinluminary-tx.1
endif

if BUILD_BITCOINLUMINARY_UTIL
  dist_man1_MANS+=bitcoinluminary-util.1
endif

if ENABLE_WALLET
if BUILD_BITCOINLUMINARY_WALLET
  dist_man1_MANS+=bitcoinluminary-wallet.1
endif
endif
